# lorri

./: .envrc  .gitattributes  .gitignore  .travis.yml  .travis.yml.nix  .travis_fold.sh  CHANGELOG  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  build.rs  coverage.sh  crates-io.list  crates-io.nix  default.nix  garbage-collection.md  lorri.1  package.nix  release.nix  services.nix  shell.nix
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.nix  ci.yml  nix-cachix-post-build-hook.sh  setup-post-build-hook.sh
contrib/: EMACS.md  README.md  daemon.md  emacs.md  lorri.service  lorri.socket
direnv/: nix.nix  nixos.nix
envrc-tests/: test.sh
example/: README.md  notify.sh  prompt.sh  shell.nix
nix/: ci.nix  execline.nix  fmt.sh  mdoc-lint.nix  mozilla.json  nixpkgs-1909.json  nixpkgs-1909.nix  nixpkgs-fmt.nix  nixpkgs-mozilla.json  nixpkgs-stable.json  nixpkgs-stable.nix  nixpkgs.json  nixpkgs.nix  overlay.nix  pre-check.sh  racer.nix  runtime.nix  rust-channels.nix  update-carnix.sh  update-dependencies.sh  update-nixpkgs.sh
nix/bogus-nixpkgs/: builder.sh  default.nix  shell-builder.sh
nix/bogus-nixpkgs/stdenv/: setup
nix/carnix/: Cargo.nix  crates-io.nix
nix/ci/: default.nix  execline.nix  lib.nix  sandbox.nix
script-tests/: envrc.sh  run-all.sh
src/: bash.rs  build.rs  build_loop.rs  builder.rs  cas.rs  changelog.rs  cli.rs  com.target.lorri.internal.varlink  com.target.lorri.varlink  com_target_lorri.rs  com_target_lorri_internal.rs  constants.rs  daemon.rs  error.rs  flake-compat-shell.nix  lib.rs  locate_file.rs  logged-evaluation.nix  logging.rs  main.rs  nix.rs  osstrlines.rs  pathreduction.rs  project.rs  roots.rs  socket.rs  thread.rs  trivial-shell.nix  watch.rs
src/daemon/: internal_proto.rs  rpc.rs
src/mpsc/: filter_timeout_iterator.rs  mod.rs
src/nix/: options.rs
src/ops/: build.rs  daemon.rs  direnv.rs  info.rs  init.rs  install.rs  mod.rs  ping.rs  prompt.sh  services.rs  shell.rs  start_user_shell.rs  stream_events.rs  upgrade.nix  upgrade.rs  watch.rs
src/ops/direnv/: envrc.bash  mod.rs  version.rs
src/ops/info/: mod.rs
src/ops/init/: mod.rs
src/ops/stream_events/: json_representation.rs
src/ops/upgrade/: mod.rs  upgrade.nix
src/project/: roots.rs
src/socket/: communicate.rs  mod.rs  path.rs
tests/daemon/: main.rs  trivial.nix
tests/direnv/: bug23_gopath.rs  direnvtestcase.rs  main.rs  mod.rs  trivial.rs
tests/direnv/bug23_gopath/: shell.nix
tests/integration/: bug110_duplicate_appends.rs  bug23_gopath.rs  bug23_setuphook.rs  bug97_varmap_leak.rs  direnv.rs  direnvtestcase.rs  envrc.rs  envrctestcase.rs  main.rs  trivial.rs
tests/integration/basic/: shell.nix
tests/integration/bug110_duplicate_appends/: shell.nix
tests/integration/bug23_gopath/: shell.nix
tests/services/: main.rs
tests/shell/: main.rs
(+3 files in other folders)
