[package]
name = "lorri"
version = "0.1.0"
authors = [
  "Graham Christensen <graham.christensen@target.com>",
]
homepage = "https://github.com/target/lorri"
license = "Apache-2.0"
edition = "2018"

[dependencies]
atomicwrites = "0.2.3"
bincode = "1.1.3"
crossbeam-channel = "0.3.8"
directories = "1.0.2"
futures-channel = "0.3"
futures-util = "0.3"
lazy_static = "1.2.0"
md5  = "0.6.1"
nix = "0.14.0"
notify = "5.0.0-pre.1"
proptest = "0.9.1"
regex = "1.1.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
slog = "2.5.2"
slog-async = "2.3.0"
slog-scope = "4.3.0"
slog-term = "2.4.2"
structopt = "0.2"
tempfile = "3.0.7"
tokio = { version = "0.2", features = [ "io-util", "process", "rt-core", "rt-threaded", "stream", "sync" ] }
varlink = "10.0.0"
vec1 = "1.1.0"

# pinned to a git commit pending v2.0 release
# see: https://github.com/rust-cli/human-panic/issues/46
human-panic = { git = "https://github.com/rust-cli/human-panic.git", rev = "70db9489" }

[build-dependencies]
varlink_generator = "9.0.0"
