[package]
name = "lorri"
# lorri uses a MAJOR.MINOR versioning scheme, see MAINTAINERS.md for details.
# Cargo requires MAJOR.MINOR.PATCH. So we translate lorri's versioning scheme
# to MAJOR.MINOR.0, i.e. the PATCH part is always zero.
version = "1.2.0" # Format: MAJOR.MINOR.0
authors = [
  "Graham Christensen <graham.christensen@target.com>",
]
homepage = "https://github.com/target/lorri"
license = "Apache-2.0"
edition = "2018"

[dependencies]
atomicwrites = "0.2.3"
crossbeam-channel = "0.4.4"
ctrlc = { version = "3.1.6", features = ["termination"] }
directories = "1.0.2"
lazy_static = "1.2.0"
md5  = "0.6.1"
nix = "0.14.0"
notify = "= 5.0.0-pre.1"
proptest = "0.9.1"
regex = "1.1.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
slog = "2.5.2"
slog-scope = "4.3.0"
slog-term = "2.5.0"
structopt = "0.2"
tempfile = "3.0.7"
varlink = "10.0.0"
vec1 = "1.1.0"
human-panic = "1.0.3"

[build-dependencies]
varlink_generator = "9.0.0"
